# aws-dynamodb-refdb

./: BUILD  Jenkinsfile  LICENSE  MODULE.bazel  README.md  aws-dynamodb-refdb_plugin_deps.lock.json  aws-dynamodb-refdb_third_party_runtime_jars.allowlist.txt  aws_dynamodb_refdb_plugin_deps.lock.json  external_plugin_deps.MODULE.bazel  external_plugin_deps.bzl  groups  project.config
src/main/java/com/gerritforge/gerrit/plugins/validation/dfsrefdb/dynamodb/: AmazonDynamoDBProvider.java  Configuration.java  DynamoDBLifeCycleManager.java  DynamoDBLockClientProvider.java  DynamoDBRefDatabase.java  Module.java  ProjectVersionCacheModule.java
src/main/java/com/googlesource/gerrit/plugins/validation/dfsrefdb/dynamodb/: AmazonDynamoDBProvider.java  Configuration.java  DynamoDBRefDatabase.java  DynamoDBRefDatabaseMetrics.java  Module.java  ProjectVersionCacheModule.java
src/main/resources/Documentation/: Build.md  config.md
src/test/java/com/gerritforge/gerrit/plugins/validation/dfsrefdb/dynamodb/: ConfigurationTest.java  DynamoDBRefDatabaseIT.java
src/test/java/com/googlesource/gerrit/plugins/validation/dfsrefdb/dynamodb/: ConfigurationTest.java  DynamoDBRefDatabaseIT.java  DynamoDBRefDatabaseTest.java
