module(name = "gerrit-aws-dynamodb-refdb")

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.10")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "aws_dynamodb_refdb_plugin_deps",
    artifacts = [
        "com.amazonaws:aws-java-sdk-core:1.11.960",
        "com.amazonaws:aws-java-sdk-dynamodb:1.11.1006",
        "com.amazonaws:dynamodb-lock-client:1.1.0",
        "com.fasterxml.jackson.core:jackson-annotations:2.10.4",
        "com.fasterxml.jackson.core:jackson-core:2.10.4",
        "com.fasterxml.jackson.core:jackson-databind:2.10.4",
        "com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:2.10.4",
        "com.github.docker-java:docker-java-api:3.2.8",
        "com.github.docker-java:docker-java-transport:3.2.8",
        "joda-time:joda-time:2.10.10",
        "net.java.dev.jna:jna:5.5.0",
        "org.rnorth.duct-tape:duct-tape:1.0.8",
        "org.rnorth.visible-assertions:visible-assertions:2.1.2",
        "org.testcontainers:localstack:1.15.2",
        "org.testcontainers:testcontainers:1.15.3",
        "software.amazon.awssdk:aws-core:2.16.19",
        "software.amazon.awssdk:dynamodb:2.16.19",
        "software.amazon.awssdk:regions:2.16.19",
        "software.amazon.awssdk:sdk-core:2.16.19",
        "software.amazon.awssdk:utils:2.16.19",
    ],
    duplicate_version_warning = "error",
    fail_if_repin_required = True,
    fail_on_missing_checksum = True,
    fetch_sources = True,
    lock_file = "//:aws_dynamodb_refdb_plugin_deps.lock.json",
    repositories = [
        "https://repo.maven.apache.org/maven2",
    ],
    version_conflict_policy = "pinned",
)
use_repo(maven, "aws_dynamodb_refdb_plugin_deps")
