module(name = "gerrit-aws-dynamodb-refdb")

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.10")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "aws_dynamodb_refdb_plugin_deps",
    artifacts = [
        "com.amazonaws:aws-java-sdk-core:1.11.960",
        "com.amazonaws:aws-java-sdk-dynamodb:1.11.1006",
        "com.amazonaws:aws-java-sdk-sts:1.11.960",
        "com.amazonaws:dynamodb-lock-client:1.1.0",
        "org.testcontainers:localstack:1.15.2",
        "org.testcontainers:testcontainers:1.15.3",
        "software.amazon.awssdk:regions:2.16.19",
    ],
    duplicate_version_warning = "error",
    fail_if_repin_required = True,
    fail_on_missing_checksum = True,
    fetch_sources = True,
    lock_file = "@gerrit-aws-dynamodb-refdb//:aws_dynamodb_refdb_plugin_deps.lock.json",
    repositories = [
        "https://repo.maven.apache.org/maven2",
    ],
    version_conflict_policy = "pinned",
)
use_repo(maven, "aws_dynamodb_refdb_plugin_deps")
